--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -179,7 +179,7 @@ QuotedSOldLeads As screen:
                             StartYear:Min(GCTotalIncentives,Year),
                             EndYear: Max(GCTotalIncentives,Year) 
                         },
-                    Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Year =Text(StartYear)))),Year,SortOrder.Descending)
+                    Filter(GCTotalIncentives,TechnicianID=VarTechnicianID.'Personnel No' && Year =Text(EndYear)))),Year,SortOrder.Descending)
                     
                 Layout: =Layout.Vertical
                 LoadingSpinner: =LoadingSpinner.Data
