--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -848,9 +848,30 @@ DashboardScreen As screen:
                         Height: =20
                         Image: =email
                         Visible: |-
-                            =  // for indicate unread message 
-                              If(yearly =true,  
-                               If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Quoted" && Year(LeadInformationLID.ProposedLeadDate)=Year(VarFirstYear)))=0, false, true),  If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Quoted"))=0, false, true))
+                            =// for indicate unread message 
+                            If(
+                                yearly = true,
+                                If(
+                                    CountRows(
+                                        Filter(
+                                            LeadChats,
+                                            ToEmail = User().Email && 'Read ' = 'Read  (LeadChats)'.No && IsQQApp = 'IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus = "Quoted" && Year(LeadInformationLID.ProposedLeadDate) = Year(VarLastYear)
+                                        )
+                                    ) = 0,
+                                    false,
+                                    true
+                                ),
+                                If(
+                                    CountRows(
+                                        Filter(
+                                            LeadChats,
+                                            ToEmail = User().Email && 'Read ' = 'Read  (LeadChats)'.No && IsQQApp = 'IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus = "Quoted"
+                                        )
+                                    ) = 0,
+                                    false,
+                                    true
+                                )
+                            )
                         Width: =20
                         X: =Parent.Width/1.25
                         Y: =Parent.Height/9
@@ -879,7 +900,7 @@ DashboardScreen As screen:
                         Visible: |-
                             =// for unread indicator
                             If(yearly =true, 
-                            If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Sold" && Year(LeadInformationLID.SoldLeadDate)=Year(VarFirstYear)))=0,false,true),If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Sold"))=0,false,true))
+                            If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Sold" && Year(LeadInformationLID.SoldLeadDate)=Year(VarLastYear)))=0,false,true),If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Sold"))=0,false,true))
                         Width: =20
                         X: =Parent.Width/1.25
                         Y: =Parent.Height/9
