--- a/QuantumTechnicianApp/CanvasManifest.json
+++ b/QuantumTechnicianApp/CanvasManifest.json
@@ -51,7 +51,6 @@
       "enablepcfmoderndatasets": true,
       "enablerowscopeonetonexpand": false,
       "enablerpawarecomponentdependency": true,
-      "enablerulespanel": false,
       "enablesaveloadcleardataonweb": false,
       "enableupdateifdelegation": false,
       "errorhandling": true,
@@ -64,7 +63,6 @@
       "formularepair": false,
       "generatedebugpublishedapp": false,
       "herocontrols": false,
-      "improvedmediacapture": false,
       "improvedtabstopbehavior": false,
       "isemptyrequirestableargument": true,
       "keeprecentscreensloaded": true,
@@ -83,7 +81,6 @@
       "reactformulabar": false,
       "reliableconcurrent": true,
       "reservedkeywords": false,
-      "reverttooldpowerautomate": false,
       "rtlinstudiopreview": false,
       "rtlsupport": false,
       "showclassicthemes": false,
@@ -124,7 +121,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "04d55ee9-0a9a-4ad8-ab40-f9d66a8b9144",
+    "AppName": "SEC Lead Generation App",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
