--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -60,8 +60,8 @@ DashboardScreen As screen:
                     Height: =60
                     Size: =24
                     Text: |-
-                        =//CountRows(Filter(LeadInformations,QQTeamName=User().FullName && Email <> Blank()))
-                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && QQTeamEmail=User().Email && Email <>Blank() ))
+                        =If(IsSupervisor=true, CountRows(Filter(LeadInformations,QQTeamEmail=User().Email && Email <> Blank())),
+                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && QQTeamEmail=User().Email && Email <>Blank() )) )
                     Width: =Parent.Width
                     X: =Parent.X
                     Y: =lblmyleadDS.Y+lblmyleadDS.Height+10
@@ -125,8 +125,8 @@ DashboardScreen As screen:
                     Height: =60
                     Size: =24
                     Text: |
-                        =//CountRows(Filter(LeadInformations,(LeadStatus="Submitted" || LeadStatus="InProgress") && Email <> Blank()))
-                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && (LeadStatus="Submitted" || LeadStatus="InProgress") && Email <> Blank() ))
+                        =If(IsSupervisor=true, CountRows(Filter(LeadInformations,(LeadStatus="Submitted" || LeadStatus="InProgress") && Email <> Blank())),
+                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && (LeadStatus="Submitted" || LeadStatus="InProgress") && Email <> Blank() )) )
                     Width: =Parent.Width
                     Y: =lblopenleadDS.Y+lblopenleadDS.Height+10
                     ZIndex: =2
@@ -188,8 +188,8 @@ DashboardScreen As screen:
                     Height: =60
                     Size: =24
                     Text: |
-                        =//CountRows(Filter(LeadInformations,LeadStatus="Quoted"))
-                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && LeadStatus="Quoted" ))
+                        =If(IsSupervisor=true, CountRows(Filter(LeadInformations,LeadStatus="Quoted")),
+                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && LeadStatus="Quoted" )) )
                     Width: =Parent.Width
                     Y: =lblquotedleadsDS.Y+lblquotedleadsDS.Height+10
                     ZIndex: =2
@@ -251,8 +251,8 @@ DashboardScreen As screen:
                     Height: =60
                     Size: =24
                     Text: |-
-                        =//CountRows(Filter(LeadInformations,LeadStatus="Sold"))
-                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && LeadStatus="Sold" ))
+                        =If(IsSupervisor=true, CountRows(Filter(LeadInformations,LeadStatus="Sold")),
+                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && LeadStatus="Sold" )))
                     Width: =Parent.Width
                     Y: =lblsoldleadDS.Y+lblsoldleadDS.Height+10
                     ZIndex: =2
@@ -314,8 +314,8 @@ DashboardScreen As screen:
                     Height: =60
                     Size: =24
                     Text: |-
-                        =//CountRows(Filter(LeadInformations,LeadStatus="Rejected"))
-                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && LeadStatus="Rejected" ))
+                        =If(IsSupervisor=true, CountRows(Filter(LeadInformations,LeadStatus="Rejected")),
+                        CountRows(Filter(LeadInformations, District in Distinct(Filter(QQTeamMasters,QQTeamEmail=User().Email),District) && LeadStatus="Rejected" )))
                     Width: =Parent.Width
                     Y: =lblrejectedleadsDS.Y+lblrejectedleadsDS.Height+10
                     ZIndex: =2
