--- a/QuantumQQTeamApp/CanvasManifest.json
+++ b/QuantumQQTeamApp/CanvasManifest.json
@@ -135,6 +135,7 @@
     "SplashScreen",
     "DashboardScreen",
     "LeadListScreen",
-    "LeadScreen"
+    "LeadScreen",
+    "UerValidateScreen"
   ]
 }
